<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_scenario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="100dp"
    tools:context="com.avoid.ihaveatheory.view.ScenarioActivity"

    android:background="@drawable/bg_name">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:text="@string/forest_text_view"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:id="@+id/forest_text_view"
                android:textAlignment="center"
                android:textSize="25sp" />

            <ImageButton
                android:layout_height="100dp"
                app:srcCompat="@drawable/forest_gray"
                android:id="@+id/forest_image_button"
                android:layout_width="match_parent"
                android:layout_marginBottom="94dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:text="@string/tundra_text_view"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:id="@+id/tundra_text_view"
                android:textAlignment="center"
                android:textSize="25sp" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:srcCompat="@drawable/tundra_gray"
                android:id="@+id/tundra_image_button" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:text="@string/mountains_text_view"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:id="@+id/mountains_text_view"
                android:textAlignment="center"
                android:textSize="25sp" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:srcCompat="@drawable/mountain_range_gray"
                android:id="@+id/mountains_image_button" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
